deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
spec:
  selector:
    app: portfolio
  ports:
  - port: 8080
    targetPort: 80
