deployment/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portfolio.k8s.zakhaven.uk`)
      kind: Rule
      services:
        - name: portfolio
          port: 8080
